bynkc/tests/fixtures/negative/133_integration_unknown_participant/src/it.bynk
test integration "x" {
  wires app.a, app.b, app.nope
  test "t" { let r <- app.a.ping() assert r == 1 }
}
